adding update request
